# schnorr-fhe

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: prime_gen.py  schnorr.py  schnorr_gen.py  schnorr_gen_long.py  snap_sync.fish
scripts/poseidon/: hash.py
src/: constants.rs  lib.rs  main.rs  main_p32.rs  main_p8.rs  poseidon.rs  poseidon_p8.rs  test.rs  utils.rs
tests/: behavior_test.rs  benchmark.rs
